webdrivermanager (2.2.0)

  + Configuration manager: WebDriverManager.config()
  + Interactive mode #1: mvn exec:java -Dexec.args="browserName"
  + Interactive mode #2: java -jar webdrivermanager.jar browserName
  + Create fat-jar from source code: mvn compile assembly:single
  + Method getVersions() to get all driver versions available (issue #191)
  + Bug-fix: intermittently fails to download driver when running in parallel (issue #186)
  + Bug-fix: Improve exit condition looking for binary file in post download logic (issues #193 and #194)
  + Bug-fix: honor forceDownload() option (related to issue #186)
  + Remove envs WDM_GIT_HUB_TOKEN_NAME and WDM_GIT_HUB_TOKEN_SECRET (use WDM_GITHUBTOKENNAME and WDM_GITHUBTOKENSECRET instead)

 -- Boni Garcia <boni.gg@gmail.com>  Fri, 23 Mar 2018 09:00:00 +0200


webdrivermanager (2.1.0)

  + Use multiton pattern (WebDriverManager class) to provide unique access point
  + Keep getInstance() method for backwards compatibility, e.g. ChromeDriverManager.getInstance().setup();
  + Rename forceOperativeSystem() method to operativeSystem()
  + Rename useTaobaoMirror() method by useMirror()
  + Remove logback.xml from packaged jar (issue #181 and #184)
  + Change configuration key wdm.forceOs by wdm.os
  + Include class diagram using ObjectAid

 -- Boni Garcia <boni.gg@gmail.com>  Thu, 4 Jan 2018 11:46:00 +0200


webdrivermanager (2.0.1)

  + Configuration keys (wdm.*) are now optional (default values: false, "", 0)
  + Include configuration key wdm.forceOs to force operative system
  + Include configuration keys wdm.proxy, wdm.proxyUser, and wdm.proxyPass for proxy settings
  + Include configuration key wdm.useTaobaoMirror to use Taobao mirror

 -- Boni Garcia <boni.gg@gmail.com>  Sun, 12 Dec 2017 19:47:00 +0200


webdrivermanager (2.0.0)

  + Relicense to Apache 2.0
  + New method in BrowserManager API: forceOperativeSystem(OperativeSystem operativeSystem)
  + New method in BrowserManager API: ignoreVersions(String... versions)