@@ -140,7 +140,7 @@ WebDriverManager exposes its API by means of the **builder pattern**. This means
 | ``architecture(Architecture)``       | By default, WebDriverManager would try to use the proper binary for the platform running the test case (i.e. 32-bit or 64-bit). This behavior can be changed by forcing a given architecture: 32-bits (``Architecture.x32``) or 64-bits (``Architecture.x64``);                              | ``wdm.architecture``                                                                                                                                                                  |
 | ``arch32()``                         | Force to use the 32-bit version of a given driver binary.                                                                                                                                                                                                                                    | ``wdm.architecture=32``                                                                                                                                                               |
 | ``arch64()``                         | Force to use the 64-bit version of a given driver binary.                                                                                                                                                                                                                                    | ``wdm.architecture=64``                                                                                                                                                               |
-| ``operativeSystem(OperativeSystem)`` | By default, WebDriverManager downloads the binary for the same operative systems than the machine running the test. This can be changed using this method (accepted values: ``WIN``, ``LINUX``, ``MAC``).                                                                                    | ``wdm.os=WIN``, ``wdm.os=LINUX``, ``wdm.os=MAC``                                                                                                                                      |
+| ``operatingSystem(OperatingSystem)`` | By default, WebDriverManager downloads the binary for the same operative systems than the machine running the test. This can be changed using this method (accepted values: ``WIN``, ``LINUX``, ``MAC``).                                                                                    | ``wdm.os=WIN``, ``wdm.os=LINUX``, ``wdm.os=MAC``                                                                                                                                      |
 | ``driverRepositoryUrl(URL)``         | This method allows to change the repository URL in which the binaries are hosted (see next section for default values).                                                                                                                                                                      | ``wdm.chromeDriverUrl``, ``wdm.operaDriverUrl``, ``wdm.internetExplorerDriverUrl``, ``wdm.edgeDriverUrl``, ``wdm.phantomjsDriverUrl``, ``wdm.geckoDriverUrl``                         |
 | ``useMirror()``                      | The [npm.taobao.org] site is a mirror which hosts different software assets. Among them, it hosts *chromedriver*, *geckodriver*,  *operadriver*, and *phantomjs* driver. Therefore, this method can be used for Chrome, Firefox, Opera, and PhantomJS to force to use the taobao.org mirror. | ``wdm.useMirror=true``                                                                                                                                                                |
 | ``proxy(String)``                    | Use a HTTP proxy for the Internet connection.                                                                                                                                                                                                                                                | ``wdm.proxy``                                                                                                                                                                         |
