@@ -16,9 +16,9 @@
  */
 package io.github.bonigarcia.wdm;
 
-import static io.github.bonigarcia.wdm.OperativeSystem.LINUX;
-import static io.github.bonigarcia.wdm.OperativeSystem.MAC;
-import static io.github.bonigarcia.wdm.OperativeSystem.WIN;
+import static io.github.bonigarcia.wdm.OperatingSystem.LINUX;
+import static io.github.bonigarcia.wdm.OperatingSystem.MAC;
+import static io.github.bonigarcia.wdm.OperatingSystem.WIN;
 import static java.lang.String.join;
 import static java.lang.invoke.MethodHandles.lookup;
 import static org.apache.commons.lang3.SystemUtils.IS_OS_LINUX;
