@@ -16,7 +16,7 @@
  */
 package io.github.bonigarcia.wdm.test;
 
-import static io.github.bonigarcia.wdm.OperativeSystem.WIN;
+import static io.github.bonigarcia.wdm.OperatingSystem.WIN;
 
 import org.junit.Before;
 import org.openqa.selenium.edge.EdgeDriver;
