@@ -16,7 +16,7 @@
  */
 package io.github.bonigarcia.wdm.test;
 
-import static io.github.bonigarcia.wdm.OperativeSystem.WIN;
+import static io.github.bonigarcia.wdm.OperatingSystem.WIN;
 import static java.lang.invoke.MethodHandles.lookup;
 import static org.junit.Assert.assertTrue;
 import static org.slf4j.LoggerFactory.getLogger;
@@ -40,7 +40,7 @@ public class IExplorerTest {
 
     @Test
     public void testIExplorer() {
-        WebDriverManager.iedriver().operativeSystem(WIN).setup();
+        WebDriverManager.iedriver().operatingSystem(WIN).setup();
         File binary = new File(WebDriverManager.iedriver().getBinaryPath());
         log.debug("Binary path for IExploer {}", binary);
         assertTrue(binary.exists());
